--- a/views/index.ejs
+++ b/views/index.ejs
@@ -78,6 +78,7 @@
 
         <div class="slds-m-right_large slds-m-top_x-small">
           <p class="slds-text-color_success" id="userCount">
+            <input type="hidden" id="currentUser" value="<%= UserEmail %>"/>
             <%= UserEmail %>
           </p>
         </div>
